--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
     "vite-plugin-live-reload": "^3.0.2"
-  }
+  },
+  "description": "六角F-8 travel-tales專案",
+  "main": "main.js",
+  "author": "",
+  "license": "ISC"
 }
